{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 9,
  "lineage": "288f0d38-0d2b-a9d8-f306-d247f0d5687d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:564913451330:vpc/vpc-095aa8b6ba6990ebc",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0498d83044a80131b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-041f079acff06fcfe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095aa8b6ba6990ebc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-091e4a514df5cddad",
            "owner_id": "564913451330"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gestor_recetas_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:loadbalancer/app/gestor-recetas/6232c286936b5884",
            "arn_suffix": "app/gestor-recetas/6232c286936b5884",
            "desync_mitigation_mode": "defensive",
            "dns_name": "gestor-recetas-1270346934.eu-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:loadbalancer/app/gestor-recetas/6232c286936b5884",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gestor-recetas",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc4d1e40ac2ca464"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c391e1ee07d29990"
              },
              {
                "subnet_id": "subnet-0d5e6465a00b7e563"
              },
              {
                "subnet_id": "subnet-0e266e45be8afea4b"
              }
            ],
            "subnets": [
              "subnet-0c391e1ee07d29990",
              "subnet-0d5e6465a00b7e563",
              "subnet-0e266e45be8afea4b"
            ],
            "vpc_id": "vpc-095aa8b6ba6990ebc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0956581394HF5D5LXGAP"
          },
          "dependencies": [
            "aws_security_group.gestor_recetas_alb",
            "data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:listener/app/gestor-recetas/6232c286936b5884/46af201a6327bd51",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Page Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:listener/app/gestor-recetas/6232c286936b5884/46af201a6327bd51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:loadbalancer/app/gestor-recetas/6232c286936b5884",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gestor_recetas_lb",
            "aws_security_group.gestor_recetas_alb",
            "data.aws_subnets.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:targetgroup/gestor-recetas-tg/0804e14ca2ca8ea3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:listener-rule/app/gestor-recetas/6232c286936b5884/46af201a6327bd51/a9a06cff93d1ea04",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:listener-rule/app/gestor-recetas/6232c286936b5884/46af201a6327bd51/a9a06cff93d1ea04",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:listener/app/gestor-recetas/6232c286936b5884/46af201a6327bd51",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gestor_recetas_lb",
            "aws_lb_listener.http",
            "aws_lb_target_group.gestor_recetas_tg",
            "aws_security_group.gestor_recetas_alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gestor_recetas_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:targetgroup/gestor-recetas-tg/0804e14ca2ca8ea3",
            "arn_suffix": "targetgroup/gestor-recetas-tg/0804e14ca2ca8ea3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-south-2:564913451330:targetgroup/gestor-recetas-tg/0804e14ca2ca8ea3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "gestor-recetas-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-095aa8b6ba6990ebc"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gestor_recetas_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:564913451330:security-group/sg-0bc4d1e40ac2ca464",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc4d1e40ac2ca464",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gestor-recetas-alb",
            "name_prefix": "",
            "owner_id": "564913451330",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095aa8b6ba6990ebc"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:564913451330:security-group/sg-090013e70d4f65d09",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-090013e70d4f65d09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gestor-recetas",
            "name_prefix": "",
            "owner_id": "564913451330",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095aa8b6ba6990ebc"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}